# aoc-2022-rust

./: .gitignore  Cargo.toml  NOTES.md  README.md
.cargo/: config
src/: lib.rs  main.rs
src/puzzles/: 02.md  03.md  04.md
