[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
debug-rs = "0.1.3"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
pico-args = "0.5.0"
